SDK-80 Add support for springreload